--- a/src/index.css
+++ b/src/index.css
@@ -3,22 +3,48 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #333;
+  background-image: url('/src/images/backgrounf_img.png'); /* Update with your image path */
+  background-size: cover;
+  background-position: center;
   color: #f5f5f5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 .app-container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #444;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
-  border-radius: 8px;
+  width: 100%;
+  padding: 25px;
+  background-color: rgba(255, 255, 255, 0.1); /* Adjust the alpha value */
+  border-radius: 12px;
+  backdrop-filter: blur(10px);
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.8);
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+header h1 {
+  color: #eaeff5;
+  font-size: 28px;
+  margin: 0;
+}
+
+header p {
+  font-size: 16px;
+  color: #aaa;
+  margin: 0;
 }
 
 nav {
-  background-color: #555;
+  background-color: #2d333b;
   padding: 10px 0;
+  border-radius: 8px;
 }
 
 nav ul {
@@ -40,7 +66,7 @@ nav a {
 }
 
 nav a:hover {
-  color: #007bff;
+  color: #d2e0ef;
 }
 
 form {
@@ -60,14 +86,14 @@ input[type='text'] {
   border: none;
   border-radius: 6px;
   margin-bottom: 15px;
-  background-color: #666;
+  background-color: #2d333b;
   color: #f5f5f5;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s, box-shadow 0.3s;
 }
 
 input[type='text']:focus {
-  background-color: #555;
+  background-color: #272c32;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
 }
 
@@ -82,7 +108,7 @@ button {
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #bbd4ef;
 }
 
 ul {
@@ -93,13 +119,13 @@ ul {
 li {
   margin-bottom: 10px;
   padding: 10px;
-  background-color: #444;
-  border-radius: 4px;
+  background-color: #363b47;
+  border-radius: 8px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
   color: #f5f5f5;
 }
 
 h2 {
   margin-top: 0;
-  color: #007bff;
+  color: #e7f3ff;
 }
