--- a/src/index.css
+++ b/src/index.css
@@ -3,20 +3,20 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url('/src/images/backgrounf_img.png'); /* Update with your image path */
+  background-image: url('/src/images/Ethereum\ Blockchain\ Illustration.png');
   background-size: cover;
   background-position: center;
-  color: #f5f5f5;
+  color: #7a83e5;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .app-container {
   width: 100%;
   padding: 25px;
-  background-color: rgba(255, 255, 255, 0.1); /* Adjust the alpha value */
+  background-color: rgba(39, 44, 50, 0.7); /* Adjust the alpha value */
   border-radius: 12px;
   backdrop-filter: blur(10px);
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.8);
@@ -27,22 +27,23 @@ header {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
+  height: 60px; 
 }
 
 header h1 {
-  color: #eaeff5;
+  color: #7a83e5;
   font-size: 28px;
   margin: 0;
 }
 
 header p {
   font-size: 16px;
-  color: #aaa;
+  color: #ccc;
   margin: 0;
 }
 
 nav {
-  background-color: #2d333b;
+  background-color: #272c32;
   padding: 10px 0;
   border-radius: 8px;
 }
@@ -86,20 +87,20 @@ input[type='text'] {
   border: none;
   border-radius: 6px;
   margin-bottom: 15px;
-  background-color: #2d333b;
+  background-color: #272c32;
   color: #f5f5f5;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s, box-shadow 0.3s;
 }
 
 input[type='text']:focus {
-  background-color: #272c32;
+  background-color: #1f242a;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
 }
 
 button {
   padding: 10px 20px;
-  background-color: #007bff;
+  background-color: #7a83e5;
   color: #f5f5f5;
   border: none;
   border-radius: 4px;
@@ -119,7 +120,7 @@ ul {
 li {
   margin-bottom: 10px;
   padding: 10px;
-  background-color: #363b47;
+  background-color: #1f242a;
   border-radius: 8px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
   color: #f5f5f5;
